--- a/projects/dailyui.html
+++ b/projects/dailyui.html
@@ -36,6 +36,12 @@
 
             <!-- Gridder gallery -->
             <ul class="gridder">
+                <li class="gridder-list" data-griddercontent="#gridder-content-71">
+                    <img src="../images/dailyui/thumbs/071-schedule-thumb.jpg" class="img-responsive" alt="Schedule"/>
+                    <div class="label">
+                        <p>Day #071</p>
+                    </div>
+                </li>
                 <li class="gridder-list" data-griddercontent="#gridder-content-70">
                     <img src="../images/dailyui/thumbs/070-events-listing-thumb.jpg" class="img-responsive" alt="Events Listing"/>
                     <div class="label">
@@ -458,6 +464,14 @@
                 </li>
             </ul>
             <!-- Gridder content -->
+            <div id="gridder-content-71" class="gridder-content">
+                <div class="gridder-image">
+                    <img src="../images/dailyui/full/071-schedule.jpg" class="img-responsive" alt="Schedule"/>
+                </div>
+                <div class="gridder-description">
+                    <h2>DailyUI 071 - Schedule</h2>
+                </div>
+            </div>
             <div id="gridder-content-70" class="gridder-content">
                 <div class="gridder-image">
                     <img src="../images/dailyui/full/070-events-listing.jpg" class="img-responsive" alt="Events Listing"/>
