--- a/projects/dailyui.html
+++ b/projects/dailyui.html
@@ -36,6 +36,12 @@
 
             <!-- Gridder gallery -->
             <ul class="gridder">
+                <li class="gridder-list" data-griddercontent="#gridder-content-72">
+                    <img src="../images/dailyui/thumbs/072-image-slider-thumb.jpg" class="img-responsive" alt="Image Slider"/>
+                    <div class="label">
+                        <p>Day #072</p>
+                    </div>
+                </li>
                 <li class="gridder-list" data-griddercontent="#gridder-content-71">
                     <img src="../images/dailyui/thumbs/071-schedule-thumb.jpg" class="img-responsive" alt="Schedule"/>
                     <div class="label">
@@ -464,6 +470,14 @@
                 </li>
             </ul>
             <!-- Gridder content -->
+            <div id="gridder-content-72" class="gridder-content">
+                <div class="gridder-image">
+                    <img src="../images/dailyui/full/072-image-slider.jpg" class="img-responsive" alt="Image Slider"/>
+                </div>
+                <div class="gridder-description">
+                    <h2>DailyUI 072 - Image Slider</h2>
+                </div>
+            </div>
             <div id="gridder-content-71" class="gridder-content">
                 <div class="gridder-image">
                     <img src="../images/dailyui/full/071-schedule.jpg" class="img-responsive" alt="Schedule"/>
