--- a/projects/dailyui.html
+++ b/projects/dailyui.html
@@ -36,6 +36,12 @@
 
             <!-- Gridder gallery -->
             <ul class="gridder">
+                <li class="gridder-list" data-griddercontent="#gridder-content-73">
+                    <img src="../images/dailyui/thumbs/073-virtual-reality-thumb.jpg" class="img-responsive" alt="Virtual Reality"/>
+                    <div class="label">
+                        <p>Day #073</p>
+                    </div>
+                </li>
                 <li class="gridder-list" data-griddercontent="#gridder-content-72">
                     <img src="../images/dailyui/thumbs/072-image-slider-thumb.jpg" class="img-responsive" alt="Image Slider"/>
                     <div class="label">
@@ -470,6 +476,14 @@
                 </li>
             </ul>
             <!-- Gridder content -->
+            <div id="gridder-content-73" class="gridder-content">
+                <div class="gridder-image">
+                    <img src="../images/dailyui/full/073-virtual-reality.jpg" class="img-responsive" alt="Virtual Reality"/>
+                </div>
+                <div class="gridder-description">
+                    <h2>DailyUI 073 - Virtual Reality</h2>
+                </div>
+            </div>
             <div id="gridder-content-72" class="gridder-content">
                 <div class="gridder-image">
                     <img src="../images/dailyui/full/072-image-slider.jpg" class="img-responsive" alt="Image Slider"/>
