--- a/projects/dailyui.html
+++ b/projects/dailyui.html
@@ -36,6 +36,12 @@
 
             <!-- Gridder gallery -->
             <ul class="gridder">
+                <li class="gridder-list" data-griddercontent="#gridder-content-74">
+                    <img src="../images/dailyui/thumbs/074-download-app-thumb.jpg" class="img-responsive" alt="Download App"/>
+                    <div class="label">
+                        <p>Day #074</p>
+                    </div>
+                </li>
                 <li class="gridder-list" data-griddercontent="#gridder-content-73">
                     <img src="../images/dailyui/thumbs/073-virtual-reality-thumb.jpg" class="img-responsive" alt="Virtual Reality"/>
                     <div class="label">
@@ -476,6 +482,14 @@
                 </li>
             </ul>
             <!-- Gridder content -->
+            <div id="gridder-content-74" class="gridder-content">
+                <div class="gridder-image">
+                    <img src="../images/dailyui/full/074-download-app.jpg" class="img-responsive" alt="Download App"/>
+                </div>
+                <div class="gridder-description">
+                    <h2>DailyUI 074 - Download App</h2>
+                </div>
+            </div>
             <div id="gridder-content-73" class="gridder-content">
                 <div class="gridder-image">
                     <img src="../images/dailyui/full/073-virtual-reality.jpg" class="img-responsive" alt="Virtual Reality"/>
