--- a/projects/dailyui.html
+++ b/projects/dailyui.html
@@ -36,6 +36,12 @@
 
             <!-- Gridder gallery -->
             <ul class="gridder">
+                <li class="gridder-list" data-griddercontent="#gridder-content-75">
+                    <img src="../images/dailyui/thumbs/075-pre-order-thumb.jpg" class="img-responsive" alt="Pre-Order"/>
+                    <div class="label">
+                        <p>Day #075</p>
+                    </div>
+                </li>
                 <li class="gridder-list" data-griddercontent="#gridder-content-74">
                     <img src="../images/dailyui/thumbs/074-download-app-thumb.jpg" class="img-responsive" alt="Download App"/>
                     <div class="label">
@@ -482,6 +488,14 @@
                 </li>
             </ul>
             <!-- Gridder content -->
+            <div id="gridder-content-75" class="gridder-content">
+                <div class="gridder-image">
+                    <img src="../images/dailyui/full/075-pre-order.jpg" class="img-responsive" alt="Pre-Order"/>
+                </div>
+                <div class="gridder-description">
+                    <h2>DailyUI 075 - Pre-Order</h2>
+                </div>
+            </div>
             <div id="gridder-content-74" class="gridder-content">
                 <div class="gridder-image">
                     <img src="../images/dailyui/full/074-download-app.jpg" class="img-responsive" alt="Download App"/>
