--- a/projects/dailyui.html
+++ b/projects/dailyui.html
@@ -36,6 +36,12 @@
 
             <!-- Gridder gallery -->
             <ul class="gridder">
+                <li class="gridder-list" data-griddercontent="#gridder-content-76">
+                    <img src="../images/dailyui/thumbs/076-loading-thumb.jpg" class="img-responsive" alt="Loading"/>
+                    <div class="label">
+                        <p>Day #076</p>
+                    </div>
+                </li>
                 <li class="gridder-list" data-griddercontent="#gridder-content-75">
                     <img src="../images/dailyui/thumbs/075-pre-order-thumb.jpg" class="img-responsive" alt="Pre-Order"/>
                     <div class="label">
@@ -488,6 +494,14 @@
                 </li>
             </ul>
             <!-- Gridder content -->
+            <div id="gridder-content-76" class="gridder-content">
+                <div class="gridder-image">
+                    <img src="../images/dailyui/full/076-loading.gif" class="img-responsive" alt="Loading"/>
+                </div>
+                <div class="gridder-description">
+                    <h2>DailyUI 076 - Loading</h2>
+                </div>
+            </div>
             <div id="gridder-content-75" class="gridder-content">
                 <div class="gridder-image">
                     <img src="../images/dailyui/full/075-pre-order.jpg" class="img-responsive" alt="Pre-Order"/>
