--- a/projects/dailyui.html
+++ b/projects/dailyui.html
@@ -36,6 +36,12 @@
 
             <!-- Gridder gallery -->
             <ul class="gridder">
+                <li class="gridder-list" data-griddercontent="#gridder-content-77">
+                    <img src="../images/dailyui/thumbs/077-thank-you-thumb.jpg" class="img-responsive" alt="Thank You"/>
+                    <div class="label">
+                        <p>Day #077</p>
+                    </div>
+                </li>
                 <li class="gridder-list" data-griddercontent="#gridder-content-76">
                     <img src="../images/dailyui/thumbs/076-loading-thumb.jpg" class="img-responsive" alt="Loading"/>
                     <div class="label">
@@ -494,6 +500,14 @@
                 </li>
             </ul>
             <!-- Gridder content -->
+            <div id="gridder-content-77" class="gridder-content">
+                <div class="gridder-image">
+                    <img src="../images/dailyui/full/077-thank-you.jpg" class="img-responsive" alt="Thank You"/>
+                </div>
+                <div class="gridder-description">
+                    <h2>DailyUI 077 - Thank You</h2>
+                </div>
+            </div>
             <div id="gridder-content-76" class="gridder-content">
                 <div class="gridder-image">
                     <img src="../images/dailyui/full/076-loading.gif" class="img-responsive" alt="Loading"/>
