--- a/projects/dailyui.html
+++ b/projects/dailyui.html
@@ -36,6 +36,12 @@
 
             <!-- Gridder gallery -->
             <ul class="gridder">
+                <li class="gridder-list" data-griddercontent="#gridder-content-78">
+                    <img src="../images/dailyui/thumbs/078-pending-invitation-thumb.jpg" class="img-responsive" alt="Pending Invitation"/>
+                    <div class="label">
+                        <p>Day #078</p>
+                    </div>
+                </li>
                 <li class="gridder-list" data-griddercontent="#gridder-content-77">
                     <img src="../images/dailyui/thumbs/077-thank-you-thumb.jpg" class="img-responsive" alt="Thank You"/>
                     <div class="label">
@@ -500,6 +506,14 @@
                 </li>
             </ul>
             <!-- Gridder content -->
+            <div id="gridder-content-78" class="gridder-content">
+                <div class="gridder-image">
+                    <img src="../images/dailyui/full/078-pending-invitation.jpg" class="img-responsive" alt="Pending Invitation"/>
+                </div>
+                <div class="gridder-description">
+                    <h2>DailyUI 078 - Pending Invitation</h2>
+                </div>
+            </div>
             <div id="gridder-content-77" class="gridder-content">
                 <div class="gridder-image">
                     <img src="../images/dailyui/full/077-thank-you.jpg" class="img-responsive" alt="Thank You"/>
