--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                 <p>I am a web developer and designer based in Wellington, New Zealand. I love all things to do with web layouts and user interface design. In my spare time, I like to eat ice-cream and go swimming.</p>
             </div>
             <div class="footer__end">
-                <p class="footer__caption">&copy; Designed by <a href="http://rosanna.co.nz/">Rosanna Fong</a> 2016.</p>
+                <p class="footer__caption">&copy; Designed by <a href="http://rosanna.co.nz/">Rosanna Fong</a> <span class="js-date"></span>.</p>
                 <ul class="social__media">
                     <li><a href="http://nz.linkedin.com/pub/rosanna-fong/37/ab6/201"><span class="fa fa-linkedin-square fa-2x"></span><span class="sr-only">This link takes you to an external site. You will be taken to Rosanna's LinkedIn profile.</span></a></li>
                     <li><a href="https://github.com/rosannafong"><span class="fa fa-github-square fa-2x"></span><span class="sr-only">This link takes you to an external site. You will be taken to Rosanna's GitHub profile.</span></a></li>
@@ -186,6 +186,7 @@
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="js/page-animation.js"></script>
+    <script type="text/javascript" src="js/site.js"></script>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
