Added content for the I am Pineapple website.

--- a/index.html
+++ b/index.html
@@ -31,6 +31,16 @@
             </div>
             <ul class="projects gallery__list">
                 <li class="gallery__item">
+                    <img src="images/project-thumbs/i-am-pineapple-thumb.jpg" alt="Thumbnail for the I am Pineapple website."/>
+                    <div class="overlay">
+                        <div class="overlay__text">
+                            <h3>I am Pineapple website</h3>
+                            <p><span class="fa fa-plus fa-2x"></span></p>
+                        </div>
+                    </div>
+                    <a href="projects/i-am-pineapple.html" class="link"></a>
+                </li>
+                <li class="gallery__item">
                     <img src="images/project-thumbs/daily-ui-thumb.png" onerror="this.src='images/project-thumbs/daily-ui-thumb.jpg'; this.onerror=null;" alt="Thumbnail for the Daily UI Challenge."/>
                     <div class="overlay">
                         <div class="overlay__text">
