--- a/projects/i-am-pineapple.html
+++ b/projects/i-am-pineapple.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-  <title>Horowhenua Honey Co. - Rosanna Fong Portfolio</title>
-  <meta name="description" content="About the Horowhenua Honey Co website.">
+  <title>I am Pineapple - Rosanna Fong Portfolio</title>
+  <meta name="description" content="About the I am Pineapple website.">
   <meta name="author" content="Rosanna Fong">
   <link rel="stylesheet" href="../css/main-styles.css">
   <link rel="stylesheet" href="https://opensource.keycdn.com/fontawesome/4.6.3/font-awesome.min.css">
@@ -20,92 +20,91 @@
                 <a href="../index.html"><img src="../images/logo.png" alt="Rosanna Fong logo."/></a>
             </div>
             <div class="header__text">
-                <h1>Horowhenua Honey Co Website</h1>
-                <h2>A website for selling honey.</h2>
-                <p class="header__subhead">I was approached to design the brand collateral and website for Horowhenua Honey Co. You can visit their website at <a href="http://horowhenuahoney.co.nz/">horowhenuahoney.co.nz <span class="sr-only">. This link will take you to an external website.</span><span class="fa fa-external-link"></span></a>.</p>
+                <h1>I am Pineapple Website</h1>
+                <h2>A website for promoting pineapple goodness.</h2>
+                <p class="header__subhead">I wanted to experiment with Shopify a bit more and created an imaginary e-commerce website for pineapples. You can visit the website at <br/><a href="https://i-am-pineapple.myshopify.com/">i-am-pineapple.myshopify.com <span class="sr-only">. This link will take you to an external website.</span><span class="fa fa-external-link"></span></a>.</p>
             </div>
         </header>
         <main class="project">
             <nav class="feature">
                 <ul class="inline__list">
                     <li><a href="../index.html">Home</a></li>
-                    <li>Horowhenua Honey Co Website</li>
+                    <li>I am Pineapple Website</li>
                 </ul>
-                <img src="../images/horowhenua-honey-co/horowhenua-honey-co-feature.jpg" class="img-responsive" alt="Horowhenua Honey Co website feature image."/>
+                <img src="../images/i-am-pineapple/i-am-pineapple-feature.jpg" class="img-responsive" alt="I am Pineapple website - header and main image banner"/>
             </nav>
             <ul class="gridder">
                 <li class="gridder-list" data-griddercontent="#gridder-content-1">
-                    <img src="../images/horowhenua-honey-co/logos.jpg" class="img-responsive" alt="Logo designs for Horowhenua Honey Co."/>
+                    <img src="../images/i-am-pineapple/i-am-pineapple-home.jpg" class="img-responsive" alt="Screenshot of the home page."/>
                 </li>
                 <li class="gridder-list" data-griddercontent="#gridder-content-2">
-                    <img src="../images/horowhenua-honey-co/concepts.jpg" class="img-responsive" alt="Initial wireframes for the Horowhenua Honey Co website."/>
+                    <img src="../images/i-am-pineapple/i-am-pineapple-collections.jpg" class="img-responsive" alt="Screenshot of the product collections page."/>
                 </li>
                 <li class="gridder-list" data-griddercontent="#gridder-content-3">
-                    <img src="../images/horowhenua-honey-co/initial-designs.jpg" class="img-responsive" alt="Initial designs for the Horowhenua Honey Co website."/>
+                    <img src="../images/i-am-pineapple/i-am-pineapple-products.jpg" class="img-responsive" alt="Screenshot of a products page."/>
                 </li>
                 <li class="gridder-list" data-griddercontent="#gridder-content-4">
-                    <img src="../images/horowhenua-honey-co/final-logo.jpg" class="img-responsive" alt="Horowhenua Honey Co logo."/>
+                    <img src="../images/i-am-pineapple/i-am-pineapple-about.jpg" class="img-responsive" alt="Screenshot of the about page."/>
                 </li>
             </ul>
             <div id="gridder-content-1" class="gridder-content">
                 <div class="gridder-image">
-                    <img src="../images/horowhenua-honey-co/logos-large.jpg" class="img-responsive" alt="Logo designs for Horowhenua Honey Co."/>
+                    <img src="..//images/i-am-pineapple/i-am-pineapple-home-lg.jpg" class="img-responsive" alt="Screenshot of the home page."/>
                 </div>
                 <div class="gridder-description">
-                    <h2>Logo designs</h2>
-                    <p>Concepts for the Horowhenua Honey Co logo.</p>
+                    <h2>Home page</h2>
                 </div>
             </div>
             <div id="gridder-content-2" class="gridder-content">
                 <div class="gridder-image">
-                    <img src="../images/horowhenua-honey-co/concepts-large.jpg" class="img-responsive" alt="Initial wireframes for the Horowhenua Honey Co website."/>
+                    <img src="../images/i-am-pineapple/i-am-pineapple-collections-lg.jpg" class="img-responsive" alt="Screenshot of the collections page."/>
                 </div>
                 <div class="gridder-description">
-                    <h2>Wireframes</h2>
-                    <p>Initial wireframes for the Horowhenua Honey Co website.</p>
+                    <h2>Product catalog landing page</h2>
                 </div>
             </div>
             <div id="gridder-content-3" class="gridder-content">
                 <div class="gridder-image">
-                    <img src="../images/horowhenua-honey-co/initial-designs-large.jpg" class="img-responsive" alt="Initial designs for the Horowhenua Honey Co website."/>
+                    <img src="../images/i-am-pineapple/i-am-pineapple-products-lg.jpg" class="img-responsive" alt="Screenshot of a products page."/>
                 </div>
                 <div class="gridder-description">
-                    <h2>Visual mock ups</h2>
-                    <p>Initial flat designs for the Horowhenua Honey Co website.</p>
+                    <h2>Example products page</h2>
                 </div>
             </div>
             <div id="gridder-content-4" class="gridder-content">
                 <div class="gridder-image">
-                    <img src="../images/horowhenua-honey-co/final-logo-large.jpg" class="img-responsive" alt="Horowhenua Honey Co logo."/>
+                    <img src="../images/i-am-pineapple/i-am-pineapple-about-lg.jpg" class="img-responsive" alt="Screenshot of the about page."/>
                 </div>
                 <div class="gridder-description">
-                    <h2>Iterating and finalising</h2>
-                    <p>After many iterations of designing a logo for Horowhenua Honey Co, a final design was selected.</p>
+                    <h2>About page</h2>
                 </div>
             </div>
             <article>
                 <h2>About the project</h2>
                 <section>
                     <h3>The brief</h3>
-                    <p>To design the brand collateral and website for Horowhenua Honey Co.</p>
+                    <p>To customise a theme for an ecommerce website using Shopify.</p>
                 </section>
                 <section>
-                    <h3>The challenge</h3>
-                    <p>Create a custom theme for an ecommerce website using Shopify.</p>
+                    <h3>The challenges</h3>
+                    <p>Coming up with an idea for the website and finding content for the website.</p>
+                    <p>Dissecting how Liquid templates work.</p>
                 </section>
                 <section>
                     <h3>The result</h3>
-                    <p>The website was launched in 2016. However, since then the website has been taken down. However, you can see a prototype of it at <a href="https://preview.rosanna.co.nz/">preview.rosanna.co.nz <span class="sr-only"> This link will take you to an external website.</span><span class="fa fa-external-link"></span></a></p>
+                    <p>I've spent some time looking at a variety of Stock images to get inspired and ended up finding lots of pineapple images that are free for commercial use with no attribution required. Thanks to sites like <a href="https://pixabay.com/">pixabay.com <span class="sr-only">. This link will take you to an external website.</span><span class="fa fa-external-link"></span></a> and <a href="https://www.pexels.com/">pexels.com <span class="sr-only">. This link will take you to an external website.</span><span class="fa fa-external-link"></span></a>.</p>
+                    <p>I then had plenty of fun playing around with Liquid templates to customise the default Shopify theme. The default theme installed was Debut.</p>
+                
+                    <p>The website was launched recently. You can see it at <br/><a href="https://i-am-pineapple.myshopify.com/">i-am-pineapple.myshopify.com <span class="sr-only">. This link will take you to an external website.</span><span class="fa fa-external-link"></span></a>.</p>
                 </section>
             </article>
             <aside>
                 <h3>Toolset</h3>
                 <ul class="bulleted__list">
-                    <li>Wireframing - Pen and paper</li>
-                    <li>Visual Design - Sketch</li>
-                    <li>User Research - Personas (Xtensio), Surveys (Survey Monkey)</li>
+                    <li>Adobe Color - For selecting a colour scheme for the website.</li>
+                    <li>Pixlr Editor - An online editor tool used to resize images.</li>
                     <li>Content Management System - Shopify</li>
-                    <li>Development - HTML5, CSS3, SASS, Compass, Susy Grid, JQuery, Javascript</li>
+                    <li>Development - HTML5, CSS3, SASS, Liquid, JQuery, Javascript</li>
                 </ul>
             </aside>
         </main>
